--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,10 +1,11 @@
+--find-links https://download.pytorch.org/whl/cpu
 flask==2.3.3
 flask-cors==4.0.0
 langchain==0.1.0
 langchain-together==0.1.0
 langchain-community==0.0.13
 python-dotenv==1.0.0
-# faiss-cpu==1.7.4
+faiss-cpu==1.7.4
 sentence-transformers==2.2.2
 transformers==4.36.0
 torch==2.7.1
