--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -8,5 +8,5 @@ python-dotenv==1.0.0
 faiss-cpu==1.8.0
 sentence-transformers==2.2.2
 transformers==4.36.0
-torch==2.7.1
+torch==2.7.1+cpu
 huggingface-hub==0.19.4
